--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
     <title>Restauracja Dolce Vita</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <p class="col col--md50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita necessitatibus amet facere consequatur nisi dolores culpa et! Inventore ab recusandae impedit molestiae cupiditate nam porro odio, laudantium, suscipit hic aliquam quo totam maxime. Quo necessitatibus perferendis doloribus dignissimos odit maiores facere suscipit nisi, odio dolorem laboriosam distinctio, non dolores, cumque numquam porro. Maiores in deserunt consequatur veritatis, voluptates minus expedita debitis obcaecati quisquam, cupiditate esse, architecto sunt porro facilis ratione omnis. Eaque veniam quia reiciendis. Natus ullam dolorum iusto, iure quam labore. Molestias est, reprehenderit, tempora corrupti exercitationem ullam, vel explicabo numquam impedit adipisci ut beatae inventore ipsam voluptas voluptatem!</p>
-            <p class="col col--md50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita necessitatibus amet facere consequatur nisi dolores culpa et! Inventore ab recusandae impedit molestiae cupiditate nam porro odio, laudantium, suscipit hic aliquam quo totam maxime. Quo necessitatibus perferendis doloribus dignissimos odit maiores facere suscipit nisi, odio dolorem laboriosam distinctio, non dolores, cumque numquam porro. Maiores in deserunt consequatur veritatis, voluptates minus expedita debitis obcaecati quisquam, cupiditate esse, architecto sunt porro facilis ratione omnis. Eaque veniam quia reiciendis. Natus ullam dolorum iusto, iure quam labore. Molestias est, reprehenderit, tempora corrupti exercitationem ullam, vel explicabo numquam impedit adipisci ut beatae inventore ipsam voluptas voluptatem!</p>
-        </div>
-    </div>
+    <a href="#" class="btn btn--red">Link</a>
+    <a href="#" class="btn btn--green btn--rounded">Link</a>
+    <a href="#" class="btn btn--outlined">Link</a>
 </body>
 </html>
