--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <title>Restauracja Dolce Vita</title>
 </head>
 <body>
-    <a href="#" class="btn btn--red">Link</a>
-    <a href="#" class="btn btn--green btn--rounded">Link</a>
-    <a href="#" class="btn btn--outlined">Link</a>
+    <header class="site-header">
+        <div class="site-header__blackout blackout">
+            <h1 class="site-header__h1 heading--h1">Restauracja Dolce Vita</h1>
+            <a class="site-header__button btn btn--red btn--rounded" href="#">Menu</a>
+        </div>
+    </header>
 </body>
 </html>
