add nav elements

--- a/index.html
+++ b/index.html
@@ -13,8 +13,24 @@
 <body>
     <header class="site-header">
         <div class="site-header__blackout blackout">
+            <nav>
+                <ul class="site-header__nav nav">
+                    <li class="nav__item">
+                        <a class="nav__link" href="#start">Start</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#menu">Menu</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#lokalizacja">Lokalizacja</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#kontakt">Kontakt</a>
+                    </li>
+                </ul>
+            </nav>
             <h1 class="site-header__h1 heading--h1">Restauracja Dolce Vita</h1>
-            <a class="site-header__button btn btn--red btn--rounded" href="#">Menu</a>
+            <a class="site-header__button btn btn--red btn--rounded" href="#menu">Menu</a>
         </div>
     </header>
 </body>
