--- a/index.html
+++ b/index.html
@@ -33,5 +33,67 @@
             <a class="site-header__button btn btn--red btn--rounded" href="#menu">Menu</a>
         </div>
     </header>
+    
+    <main>
+        <section class="site-section" id="start">
+            <div class="container">
+                <h2 class="heading--h2">Start</h2>
+                <div class="row">
+
+                <p class="col">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate enim corporis debitis ullam aliquid minus ex recusandae quisquam illum vel exercitationem atque iusto maiores molestiae expedita laborum fugiat esse animi, ad cupiditate consequuntur quo perferendis neque! Tempore veniam quod laboriosam numquam ipsum illo aliquid quaerat nobis consectetur incidunt sunt asperiores, dolorem reprehenderit. Porro earum, voluptas reiciendis commodi in distinctio illum maxime enim molestias, veniam dolore vitae nihil veritatis reprehenderit doloribus inventore tenetur facilis ipsum architecto ducimus laudantium natus assumenda ullam corrupti? Minima, ea nam dolorum eaque ab quaerat illum. Cumque voluptate reiciendis maxime eligendi. Dolore adipisci nisi quidem sed incidunt!</p>
+            </div>
+        </div>
+        </section>
+        <section class="site-section site-section--bg-color" id="menu">
+            <div class="container">
+                <h2 class="heading--h2 text-color-white">Menu</h2>
+                <div class="row">
+                    <div class="col col--md50 col--lg25">
+                        <div class="image-box">
+                            <div class="image-box__image"></div>
+                            <div class="image-box__txt">Lorem ipsum dolor sit.</div>
+                        </div>
+                    </div>
+                    <div class="col col--md50 col--lg25">
+                        <div class="image-box">
+                            <div class="image-box__image image-box__image--next"></div>
+                            <div class="image-box__txt">Lorem ipsum dolor sit.</div>
+                        </div>
+                    </div>
+                    <div class="col col--md50 col--lg25">
+                        <div class="image-box">
+                            <div class="image-box__image"></div>
+                            <div class="image-box__txt">Lorem ipsum dolor sit.</div>
+                        </div>
+                    </div>
+                    <div class="col col--md50 col--lg25">
+                        <div class="image-box">
+                            <div class="image-box__image image-box__image--next"></div>
+                            <div class="image-box__txt">Lorem ipsum dolor sit.</div>
+                        </div>
+                    </div>
+
+                    
+                </div>
+            </div>
+        </section>
+        <section class="site-section" id="lokalizacja">
+            <div class="container">
+                <h2 class="heading--h2">Lokalizacja</h2>
+                <div class="row">
+                <p class="col"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4982.977728502068!2d-2.245838107733891!3d53.479166769915565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487bb1c28baf4c47%3A0x128816f87a31840d!2sSt.%20Peter&#39;s%20Square!5e0!3m2!1spl!2suk!4v1702133002256!5m2!1spl!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+            </div>
+        </div>
+        </section>
+        <section class="site-section" id="kontakt">
+            <div class="container">
+                <h2 class="heading--h2">Kontakt</h2>
+                <div class="row">
+                <p class="col">
+                </p>
+            </div>
+        </div>
+        </section>
+    </main>
 </body>
 </html>
