--- a/index.html
+++ b/index.html
@@ -95,5 +95,14 @@
         </div>
         </section>
     </main>
+    <footer class="site-footer">
+        <div class="container">
+            <div class="row">
+                <p class="col col--md33">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus iusto quos consequatur neque! Minus libero dolor aut tempore, dolorem deserunt?</p>
+                <p class="col col--md33">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus iusto quos consequatur neque! Minus libero dolor aut tempore, dolorem deserunt?</p>
+                <p class="col col--md33">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus iusto quos consequatur neque! Minus libero dolor aut tempore, dolorem deserunt?</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
